Fix problem that 'flex-wrapL wrap' is applied to add button separately 2

--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -14,7 +14,7 @@ p {
 
 .frames {
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     margin-bottom: 80px;
 }
 
@@ -26,8 +26,4 @@ p {
 
 .frames > .addButton:hover {
     opacity: 1;
-}
-
-.dummyDiv {
-    width: 1px;
 }
